--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Scilab/Classes Notes/2022-08-16.md",
+            "file": "Scilab/Index.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Scilab/Classes Notes/2022-08-16.md",
+                "file": "Scilab/Index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Scilab/Classes Notes/2022-08-16.md",
+                "file": "Scilab/Index.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Scilab/Classes Notes/2022-08-16.md"
+                "file": "Scilab/Index.md"
               }
             }
           }
@@ -130,15 +130,15 @@
   },
   "active": "d3446120bc74df41",
   "lastOpenFiles": [
+    "template/Note.md",
+    "Scilab/Index.md",
+    "Scilab/Classes Notes/2022-08-16.md",
     "Scilab/Attachment/Image/cosine.png",
     "Scilab/Attachment/Image/sine.png",
-    "Scilab/Classes Notes/2022-08-16.md",
     "Scilab/Classes Notes/2022-08-12.md",
-    "template/Note.md",
     "2022-08-15.md",
     "2022-09-12.md",
     "2022-09-10.md",
-    "Cheat Sheet.md",
-    "template/To Do.md"
+    "Cheat Sheet.md"
   ]
 }
