--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "DigitalGarden",
+  "name": "@jackyzha0/quartz",
+  "description": "🌱 publish your digital garden and notes as a website",
   "private": true,
   "version": "4.3.1",
   "type": "module",
+  "author": "jackyzha0 <j.zhao2k19@gmail.com>",
   "license": "MIT",
+  "homepage": "https://quartz.jzhao.xyz",
   "repository": {
     "type": "git",
     "url": "https://github.com/jackyzha0/quartz.git"
