--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: BiO Digital Garden
 on:
   push:
     branches:
-      - msc-ca
+      - main
  
 permissions:
   contents: read
@@ -18,10 +18,10 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@msc-ca
+      - uses: actions/checkout@main
         with:
           fetch-depth: 0 # Fetch all history for git info
-      - uses: actions/setup-node@msc-ca
+      - uses: actions/setup-node@main
         with:
           node-version: 22
       - name: Install Dependencies
@@ -29,7 +29,7 @@ jobs:
       - name: Build Quartz
         run: npx quartz build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@msc-ca
+        uses: actions/upload-pages-artifact@main
         with:
           path: public
  
@@ -42,4 +42,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@msc-ca
+        uses: actions/deploy-pages@main
